deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flagr
  name: flagr
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: flagr
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: flagr
    spec:
      containers:
      - env:
        - name: FLAGR_DB_DBCONNECTIONSTR
          value: postgres://flagr:aevaec9Chak3vu5u@postgres.app.clevabit.services:5432/flagr?sslmode=require
        - name: FLAGR_DB_DBDRIVER
          value: postgres
        - name: FLAGR_INSTANA_ENABLED
          value: "true"
        image: harbor.clevabit.services/ci/flagr:clevabit-${BUILD_NUMBER}
        imagePullPolicy: Always
        name: flagr
        ports:
        - containerPort: 18000
          name: tcp18000
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: harbor-clevabit
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: flagr
  name: flagr
  namespace: default
spec:
  ports:
  - name: tcp18000
    port: 18000
    protocol: TCP
    targetPort: 18000
  selector:
    app: flagr
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  labels:
    app: flagr
  name: flagr.clevabit.services
  namespace: default
spec:
  rules:
  - host: flagr.clevabit.services
    http:
      paths:
      - backend:
          serviceName: flagr
          servicePort: tcp18000
        path: /
  tls:
  - hosts:
    - flagr.clevabit.services
    secretName: tls-flagr-clevabit
